# decent-visualizer

./: .dockerignore  .gitignore  MILESTONES.md  Makefile  README.md  config.env  docker-compose.yml
.claude/: settings.json
.github/actions/load-config/: action.yml  index.js  index.mjs
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  docker-entrypoint.sh  pyproject.toml  pyrightconfig.json
backend/app/: compression.py  config.py  db.py  dependencies.py  main.py
backend/app/lib/: countries.py  normalization.py  photo_extract.py
backend/app/models/: auth.py  bean.py  entities.py  settings.py  shot.py
backend/app/routers/: auth.py  beans.py  entities.py  ping.py  settings.py  shots.py
backend/app/storage/: __init__.py  beans.py  entities.py  sessions.py  settings.py  shots.py  users.py
backend/supabase/migrations/: 001_initial.sql
backend/tests/: test_bean_pagination.py  test_compression.py  test_normalization.py
config/: ci.json  dev.json.example  infra.json  prod.json
config/dev/: backend.json
config/prod/: backend.json  ci.json  infra.json  ops-agent.yaml
frontend/: .gitignore  .oxlintrc.json  DESIGN.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  app.test.ts  index.css  vite-env.d.ts
frontend/src/components/: BeanForm.tsx  BeanTable.tsx  CanonicalTypeahead.tsx  NormalizationCandidatePicker.tsx  PhotoExtractButton.tsx  ProcessCandidatePicker.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: About.tsx  Beans.tsx  Home.tsx  Login.tsx  (+1 more)
infra/: .gitignore  infisical.tf  main.tf  oci_deploy.pub  outputs.tf  providers.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
schemas/: shot-upload.schema.json
scripts/: deploy.sh  gcp-oidc-setup.sh  gcp-setup.sh
supabase/: config.toml
supabase/migrations/: 20260618000000_init.sql  20260625000000_add_canonical_entities.sql  20260627000000_reference_canonical_entities_from_beans.sql  20260627010000_compress_shot_measurements.sql  20260627020000_add_bean_full_text_search.sql
(+12 files in other folders)
